--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "history": "^4.7.2",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
-    "react-router": "^4.2.0"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
