--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/janeluck/router-action#readme",
   "dependencies": {
     "history": "^4.7.2",
+    "rc-animate": "^2.4.4",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-router": "^4.2.0",
@@ -32,7 +33,9 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
+    "less-loader": "^4.1.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   }
