--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "history": "^4.7.2",
     "rc-animate": "^2.4.4",
+    "rc-dialog": "^7.1.4",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-router": "^4.2.0",
@@ -34,8 +35,11 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.0.1",
     "less-loader": "^4.1.0",
+    "style-loader": "^0.21.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   }
