--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "moment": "^2.22.1",
     "rc-animate": "^2.4.4",
     "rc-dialog": "^7.1.4",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
+    "react": "^15.4.2",
+    "react-dom": "15.4.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "sprintf-js": "^1.1.1"
